--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -55,7 +55,7 @@ $Background:linear-gradient(135deg, #ff8f2d 0%, #481ccd 100%, #481ccc 100%);
         pointer-events: none;
     }
 
-    aside[id="new"]{
+    .con{
         display: grid;
     }
 }
